[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nornr-agentpay"
version = "0.1.0"
description = "Python SDK for NORNR, the control plane between AI agent intent and real-world execution"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["typing-extensions>=4.12"]
authors = [
  { name = "NORNR" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ai-agents", "agent-governance", "control-plane", "approvals", "audit-trail", "budget-controls", "mcp", "browser-agents"]
urls = { Homepage = "https://nornr.com", Documentation = "https://nornr.com/quickstart", Repository = "https://github.com/NORNR/sdk-py", Issues = "https://github.com/NORNR/sdk-py/issues", Changelog = "https://github.com/NORNR/sdk-py/blob/main/CHANGELOG.md" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
async = ["httpx>=0.27"]
pydantic = ["pydantic>=2.9"]
pydanticai = ["pydantic>=2.9", "pydantic-ai>=0.0.24"]
fastapi = ["fastapi>=0.115"]
langgraph = ["langgraph>=0.2.0"]
openai-agents = ["openai-agents>=0.3.0"]
langchain = ["langchain>=0.3.0", "langchain-core>=0.3.0", "langchain-openai>=0.3.0"]
crewai = ["crewai>=0.126.0"]
dev = ["build>=1.2", "twine>=5.1", "httpx>=0.27", "pydantic>=2.9", "mypy>=1.11", "pytest>=8.3", "ruff>=0.6"]

[project.scripts]
nornr = "agentpay.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentpay = ["py.typed"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
ignore_missing_imports = true
